# cdm-cbioportal-etl

./: .gitignore  README.md  environment.yml  etl_config_all_impact.yml  process_codebook.ipynb  pyproject.toml  update_conda_envs.sh
archive/: cbioportal_timeline_specimen.py  mind-cdm-cbioportal-formatting-patient-summary.py  mind-cdm-cbioportal-formatting-sample-summary.py  mind_cdm_cbioportal_formatting_patient_dx_summary.py  mind_cdm_cbioportal_formatting_patient_met_site_summary.py  mind_cdm_cbioportal_formatting_sample_dx_summary.py
bash/: bash_summary_templates.sh
config/: config_databricks_copy.yml  etl_config_all_impact.yml  etl_config_all_impact_testing_study.yml  etl_config_mskaccess.yml  etl_config_mskaccess_dev.yml  etl_config_mskarcher.yml  etl_config_mskarcher_dev.yml  etl_config_mskimpact.yml  etl_config_mskimpact_dev.yml  etl_config_mskimpact_heme.yml  etl_config_mskimpact_heme_dev.yml
docs/: data_file_formatting.md  modifying_the_codebook.md  summary_data_formatting.md  summary_template_generation.md  timeline_files.md
example_use/: cbioportal_summary_creator.ipynb
git-tasks/: git_cleanup.sh  git_fetch.sh  git_fetch_impact_ids.sh  git_fetch_impact_pipeline.sh  git_push.sh  git_push_impact_pipeline.sh
monitoring/: monitoring_completeness.py
pipeline/: constants.py  pathnames.py  variables.py  variables_testing_study.py
s3-tasks/: authenticate_service_account.sh  s3_pull.sh  s3_pull_dev.sh  s3_push.sh  s3_push_dev.sh  s3_push_new.sh
summary/: cbioportal_overall_survival.py  cbioportal_summary_file_combiner.py  cbioportal_summary_merger.py  (+5 more)
(+159 files in other folders)
