[build-system]
requires = ["setuptools>=69", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cdm_cbioportal_etl*"]

[project]
name = "cdm_cbioportal_etl"
version = "0.1.0"
requires-python = ">=3.10, <4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
]

#dependencies = [
#    "pandas==2.1.4",
#    "dataclasses==0.8",
#    "msk_cdm @ git+https://github.com/clinical-data-mining/msk_cdm.git"
#]

[tool.setuptools_scm]
root = "."
